# log-parser

./: .gitignore  README.md  pyproject.toml
log_challenge/: main.py  parser.py  parser_quake.py
log_challenge/models/: game.py  means_death.py  player.py
log_challenge/models/utils/: pattern.py  patterns.py
log_challenge/scrape_data/: get_log_file.py
log_challenge/src/: game.py
